* Separate generic coin support code into separate library

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "indexer"]
 	path = indexer
 	url = ../freshgrlc-indexer
+[submodule "coinsupport"]
+	path = coinsupport
+	url = ../freshgrlc-coinsupport-python
