--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 pathlib2==2.3.5
+pycoin==0.90.20201031
 pycrypto==2.6.1
 pycryptodome==3.10.1
 PyMySQL==0.10.1
